# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci-tests.yml
page_loader/: cli.py  page_loader.py
page_loader/scripts/: page_loader.py
temp/: ru-hexlet-io-courses.html
tests/: test_page_loader.py
tests/fixtures/: expected.html  initial.html
