[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page loader"
authors = ["Alexey-Shepelev <alexey.sailor@gmail.com>"]
readme = "README.md"
packages = [{include = "page_loader"}]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
